font change, spacing fixes

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,7 +2,7 @@ body {
   background:gray;
   color:white;
   text-align: center;
-  font-family: "Megrim";
+  font-family: "Cabin";
   /*background:url('https://i.imgur.com/ltmWANZ.png');*/
   /*background:url(../src/images/stars.png), #333;/*/
   background:url("../src/images/colorful.jpg");
@@ -12,36 +12,33 @@ body {
 }
 
 h1 {
-  font-size: 10em;
+  font-size: 8em;
+  font-family: "Permanent Marker";
   /*text-shadow:10px 5px black;*/
   text-shadow: 10px 6px black;
-  font-weight:bold;
   
 }
 
 .headline {
-    text-shadow: 0px 13px black;
-    font-weight:bold;
+    text-shadow: 9px 13px black;
       font-size: 11em;
 }
 
 .sub-headline {
-  font-size: 6em;
-  font-weight:bold;
-      text-shadow: 0px 8px black;
+  font-size: 4.5em;
+  font-family: "Permanent Marker";
+  text-shadow: 0px 8px black;
 
 }
 
 h4 {
   font-size:3.2em;
-  /*text-shadow: 5px 5px black;*/
-  font-family: Megrim;
 }
 
 .btn-outline-custom {
   background:transparent;
-  margin-top:20px;
-  border: 2px solid white;
+  /*margin-top:20px;*/
+  border: 4px solid white;
   font-size:28px;
   width:auto;
   min-width:70px;
@@ -60,14 +57,18 @@ h4 {
   width:auto;
 }
 
+.wider-button {
+  padding: 10px 20px;
+}
+
 .btn-outline-custom:hover {
-  border: 3px solid rgba(0,0,0,0.35);
+  /*border: 4px solid rgba(0,0,0,0.35);*/
   /*box-shadow: 0px 5px 3px black;*/
-  border-bottom:6px solid black;
-  background:rgba(0,0,0,0.5);
-  color:white;
-  -webkit-transition: border, 900ms background 1000ms; /* Safari */
-  transition: border 900ms, background 1000ms;
+  /*border-bottom:6px solid black;*/
+  /*background:rgba(0,0,0,0.5);*/
+  /*color:orange;*/
+  -webkit-transition: all 900ms; /* Safari */
+  /*transition: all 1500ms linear;*/
 }
 
 .fa {
@@ -95,7 +96,7 @@ section {
 }
 
 .portfolio-text {
-  padding: 20px 30%;
+  padding: 20px 22%;
   font-size:2.5em;
   line-height: 50px;
 }
@@ -109,7 +110,7 @@ strong {
   background:rgba(0,0,0,0.5);
   padding: 10px; 
   font-size:3.5em; 
-  font-weight:bold
+  /*font-weight:bold*/
 }
 
 .arrow-box {
@@ -183,7 +184,8 @@ and (max-device-width : 1024px)  {
 
     h1 {
       font-weight:bold;
-      font-size:13em;
+      font-size:11em;
+      text-shadow: 10px 21px black;
   }
   
   h4 {
@@ -196,7 +198,7 @@ and (max-device-width : 1024px)  {
   
   .portfolio-text {
     padding: 20px 20%;
-    font-size:4em;
+    font-size:3em;
     line-height:80px;
   }
   
@@ -213,7 +215,12 @@ and (max-device-width : 1024px)  {
     padding:20px;
     height:auto;
   }
-
+  
+  .wider-button {
+    padding: 20px 40px;
+    font-size:4em;
+    border:10px solid white;
+  }
   
   .sub-headline {
     font-size:5em;
@@ -221,10 +228,11 @@ and (max-device-width : 1024px)  {
   
   .headline {
     text-shadow: 4px 12px black;
-  }
+    text-shadow: 10px 21px black;
+}
   
   body, h4 {
-    font-family: "Raleway"
+    font-family: "Cabin"
   }
 
 }
